# library

./: README.md  configure.ac
build-aux/m4/: device.m4  flag.m4  host.m4
src/: Makefile.am  main.c
src/atag/: Makefile.am  atag.h  next.c
src/avl/: Makefile.am  avl.h  balance.c  create.c  destroy.c  find.c  insert.c  max.c  min.c  prepare.c  print.c  remove.c
src/list/: Makefile.am  construct.c  destruct.c  empty.c  list.h  lookup.c  node_create.c  peek.c  pop.c  print.c  push.c
src/sys/: Makefile.am  message.h  sys.h  type.h
src/sys/async/: receive.c  send.c
src/sys/sync/: receive.c  send.c
src/tar/: Makefile.am  end.c  file.c  helper.c  lookup.c  next.c  size.c  tar.h
